--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "hello-world",
-  "version": "0.0.0",
+  "name": "brain-agriculture-api",
+  "version": "1.0.0",
+  "author": "Gabriel Silveira",
   "private": true,
   "type": "module",
   "license": "UNLICENSED",
   "scripts": {
     "start": "node bin/server.js",
     "build": "node ace build",
-    "dev": "node ace serve --hmr",
+    "dev": "node ace serve --watch",
     "test": "node ace test",
     "lint": "eslint .",
     "format": "prettier --write .",
