--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "pino-pretty": "^11.2.2",
     "prettier": "^3.3.3",
     "ts-node-maintained": "^10.9.4",
-    "typescript": "~5.5"
+    "typescript": "~5.5",
+    "adonis-autoswagger": "^3.63.0"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.2.3",
@@ -57,7 +58,6 @@
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.2.0",
     "@vinejs/vine": "^2.1.0",
-    "adonis-autoswagger": "^3.63.0",
     "luxon": "^3.5.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2"
