--- a/package.json
+++ b/package.json
@@ -50,18 +50,17 @@
     "prettier": "^3.3.3",
     "ts-node-maintained": "^10.9.4",
     "typescript": "~5.5",
-    "adonis-autoswagger": "^3.63.0"
-  },
-  "dependencies": {
     "@adonisjs/auth": "^9.2.3",
     "@adonisjs/core": "^6.12.1",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.2.0",
     "@vinejs/vine": "^2.1.0",
+    "adonis-autoswagger": "^3.63.0",
     "luxon": "^3.5.0",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2"
   },
+  "dependencies": {},
   "hotHook": {
     "boundaries": [
       "./app/controllers/**/*.ts",
